--- a/Exp-2/index.html
+++ b/Exp-2/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS DOM Methos => Dynamic Handling</title>
+    <title>ChessBoard</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
